Fix scroll to bottom arrow not appearing on iphone devices

--- a/assets/css/vento.css
+++ b/assets/css/vento.css
@@ -102,6 +102,7 @@
 
     #banner .scrolly {
         display: block;
+        margin-bottom: 40px;
     }
 
     #contact {
